[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "kladia"
version = "0.0.1"
authors = [
  { name="Jocer Franquiz", email="author@example.com" },
]
description = "A simple and minimal graph library based on Python dictionaries."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jocerfranquiz/kladia"
"Bug Tracker" = "https://github.com/jocerfranquiz/kladia/issues"